<resources>
    <string name="app_name">PicToSpeech</string>
    <string name="subtitle">Reader companion for the visually impaired</string>
    <string name="scan_a_photo">Scan a Photo Page</string>
    <string name="settings">Settings Page</string>
    <string name="settings_content_description">To change the language of the app and/or the speech rate</string>
    <string name="change_language">Change Language</string>
    <string name="modify_speech_rate">Modify Speech Rate</string>
    <string name="change_app_language_description">Change the language of the app UI.</string>
    <string name="change_speech_language_description">Change the language of the Speech.</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="default_speech_rate">x1.0</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="cancel">Cancel</string>
    <string name="processing_photo_desc">An icon showing that the photo is being processed</string>
    <string name="read_aloud">Read Aloud</string>
    <string name="sample_result_text">Brulle Cheese Cake Brulle cheese cake is one of the most famous cake in the world. You can make it in your kitchen with the recipe below. Ingredients: 2 cups of awesome ½ tsp of fun 3 tbsp color 1 cup of kindness salt and pepper to taste Procedure: Mix awesome and fun together. Add a dash of color. Flavor everything with kindness! Notes: Enjoyed best when shared.Brulle Cheese Cake Brulle cheese cake is one of the most famous cake in the world. You can make it in your kitchen with the recipe below. Ingredients: 2 cups of awesome ½ tsp of fun 3 tbsp color 1 cup of kindness salt and pepper to taste Procedure: Mix awesome and fun together. Add a dash of color. Flavor everything with kindness! Notes: Enjoyed best when shared.</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="title_activity_image_picker">ImagePickerActivity</string>
    <string name="processing">Processing…</string>
    <string name="scan_a_photo_content_description">Scan a picture: Use this to read texts on a picture.</string>
    <string name="processing_image_description">An icon indicating that the image is being processed.</string>
    <string name="app_language">App Language</string>
    <string name="speech_language">Speech Language</string>
    <string name="modify_speech_rate_content_description">Change the speech rate</string>
    <string name="select_from_gallery_content_description">Extract text from a photo in the gallery</string>
    <string name="take_a_photo_content_description">Extract text from the photo you are about to capture</string>
    <string name="result_edit_text_content_description">Text from the photo</string>
    <string name="result_text_view">Result Text View</string>
    <string name="enhance">Enhance</string>
    <string name="summarize">Summarize</string>
    <string name="explain">Explain</string>
    <string name="more_ai">More (AI)</string>
    <string-array name="languages">
        <item>English</item>
        <item>Turkish</item>
    </string-array>
</resources>