<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result_text_view"
            style="@android:style/Widget.DeviceDefault.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/result_edit_text_content_description"
            android:gravity="top"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:singleLine="false"
            android:text="@string/result_text_view"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body"
            app:layout_constraintBottom_toTopOf="@+id/copy_to_clipboard_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/copy_to_clipboard_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/result_edit_text"
        android:background="@color/color_green_light"
        android:text="@string/copy_to_clipboard"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/read_aloud_btn"
        app:layout_constraintEnd_toEndOf="@id/read_aloud_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds,VisualLintButtonSize" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/read_aloud_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/copy_to_clipboard_btn"
        android:background="@color/button_color1"
        android:text="@string/read_aloud"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/enhance_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enhance_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/copy_to_clipboard_btn"
        android:background="@color/button_color1"
        android:text="@string/enhance"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/summarize_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/summarize_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/copy_to_clipboard_btn"
        android:background="@color/button_color1"
        android:text="@string/summarize"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/explain_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/explain_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/copy_to_clipboard_btn"
        android:background="@color/button_color1"
        android:text="@string/explain"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>