<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Language"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/app_language_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"/>
    <Spinner
        android:id="@+id/app_language_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="24dp"
        android:accessibilityLiveRegion="polite"
        android:background="@color/color_gray"
        android:contentDescription="@string/change_app_language_description"
        android:gravity="center"
        android:text="@string/change_language"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Speech Language"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/speech_language_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"/>
    <Spinner
        android:id="@+id/speech_language_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="25dp"
        android:accessibilityLiveRegion="polite"
        android:background="@color/color_green"
        android:contentDescription="@string/change_speech_language_description"
        android:gravity="center"
        android:text="@string/change_language"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_language_spinner" />

    <TextView
        android:id="@+id/options_title_txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/modify_speech_rate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speech_language_spinner"
        app:layout_constraintVertical_bias=".5" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify_speech_rate_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:accessibilityTraversalBefore="@id/app_language_spinner"
        android:background="@color/button_color1"
        android:text="@string/modify_speech_rate"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>