<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/speech_rate_txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/modify_speech_rate_tv"
        android:text="@string/default_speech_rate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/decrease_speech_rate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decrease_speech_rate_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="170dp"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/speech_rate_txtV"
        android:background="@color/color_red"
        android:text="@string/decrease"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/increase_speech_rate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/modify_speech_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:text="@string/modify_speech_rate"
        android:textAlignment="center"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/increase_speech_rate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrease_speech_rate_btn"
        app:layout_constraintVertical_bias="0.5
" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/increase_speech_rate_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:accessibilityLiveRegion="polite"
        android:accessibilityTraversalAfter="@id/decrease_speech_rate_btn"
        android:background="@color/color_green"
        android:text="@string/increase"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>